fixed spacing for the nav on mobile, added an emoji favicon

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -128,6 +128,9 @@
         .body-copy{
             font-size: .9em;
         }
+        #nav{
+            margin-bottom: 100px;
+        }
     }
 
 
@@ -146,7 +149,6 @@
         #nav{
             margin-bottom: 100px;
         }
-
     }
 
 
@@ -159,4 +161,8 @@
             margin: auto;
             padding: 50px 0;
         }
+        #nav{
+            margin-bottom: 100px;
+        }
+
     }
